[VAS] Item-8207 : Corrections des tests unitaires